# rpc_docker_k4a

./: .coverage  .gitignore  CHANGELOG.md  DOCKER_COMPARISON.md  Dockerfile  Dockerfile.k4a-prebuilt  Dockerfile.ubuntu20  LICENSE  NEW_IMPLEMENTATION_GUIDE.md  README.md  README_ORIGINAL.md  SSH_SOLUTION_FINAL.md  azure_kinect_demo.py  capture_optimized.py  check_usb_speed.sh  deploy-mesa-vpn.sh  deploy-prebuilt-vpn.sh  docker-compose.mesa.yml  example_capture.py  example_usage.py  install_kinect_native.sh  install_native.sh  k4aviewer.err  kinect_rpc_server.py  mesa_performance_guide.py  optimize_performance.py  pyproject.toml  run_kinect_host.sh  run_kinect_no_privileged.sh  run_kinect_pm_safe.sh  run_kinect_privileged.sh  run_kinect_ultra_safe.sh  simple_frame_test.py  test_color_only.py  test_comprehensive.py  test_depth.py  test_frame_capture.py  test_minimal_native.py  test_new_kinect.py  test_pip_structure.py
archive/: README.md
archive/failed-attempts/: Dockerfile.hostgpu  Dockerfile.k4a-source  Dockerfile.optimized  Dockerfile.ubuntu22  build-ubuntu22-vpn.sh  build-vpn.sh  deploy-vpn.sh
archive/old-docs/: SETUP_INSTRUCTIONS.md  SOLUTION.md  VPN_SOLUTIONS.md
archive/old-scripts/: buildkitd.toml  capture_depth.py  diagnose_displaylink.sh  docker-compose.mesa.yml  docker-compose.optimized.yml  docker-compose.ubuntu22.yml  run-kinect-vpn.sh  run_kinect.sh  run_kinect_auto.sh  run_kinect_enhanced.sh  run_kinect_safe.sh  run_kinect_safe_displaylink.sh  run_kinect_with_displaylink_fix.sh  simple_depth_capture.py  simple_test.py  test-vpn-solutions.sh  test_container_basic.py  test_depth_comprehensive.py  test_depth_working.py  test_kinect.py  test_optimized_docker.sh  test_simple.py  working_test.py
gpt/: Dockerfile
rpc_docker_k4a/: 99-k4a.rules  __init__.py  client.py  combined.py  utils.py
rpc_docker_k4a/docker/: Dockerfile.k4a-prebuilt  Dockerfile.mesa  build-mesa-vpn.sh  build-prebuilt-vpn.sh  deploy-mesa-vpn.sh  deploy-prebuilt-vpn.sh  deploy-prebuilt-xvfb.sh
tests/: __init__.py  test_combined.py  test_nvidia_container_start.py  test_package.py
